readsecret.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
  labels:
    name: test
spec:
  containers:
  - name: mycontainer
    image: redis
