svc_loadbalancer_vproapp.yml
apiVersion: v1
kind: Service
metadata:
  name: helloword-service-lb
spec:
  ports:
  - port: 80   
    targetPort: vproapp-port
    protocol: TCP
  selector:
    app: vproapp
  type: LoadBalancer
