svc_nodeport_vproapp.yml
apiVersion: v1
kind: Service
metadata:
  name: helloword-service
spec:
  ports:
  - port: 8090
    nodePort: 30001
    targetPort: appcontainer
    protocol: TCP
  selector:
    app: vproapp
  type: NodePort
