vproapppod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  containers:
    - name: appcontainer
      image: xxluiggixx/vprofileapp
      ports:
        - name: vproapp-port
          containerPort: 8080  
---
apiVersion: v1
kind: Service
metadata:
  name: helloword-service
spec:
  ports:
  - port: 8090
    nodePort: 30001
    targetPort: vproapp-port
    protocol: TCP
  selector:
    app: vproapp
  type: NodePort
