portal-devops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-devops
  namespace: nm-devops
spec:
  selector:
    matchLabels:
      app: portal-devops
  replicas: 1
  template:
    metadata:
      labels:
        app: portal-devops
    spec:
      containers:
      - name: portal-devops
        image: registry.justiciasalta.gov.ar/portaldevops:1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
      imagePullSecrets:
       - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: portal-devops-svc
  namespace: nm-devops
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: portal-devops
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-devops-ingress
  namespace: nm-devops
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.justiciasalta.gov.ar #LB del ingress-nginx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portal-devops-svc
            port:
              number: 80
---
# LB
apiVersion: v1
kind: Service
metadata:
  name: portal-devops-lb
  namespace: nm-devops
spec:
  ports:
  - port: 80   
    targetPort: 80
    protocol: TCP
  selector:
    app: portal-devops
  type: LoadBalancer
